--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "bcryptjs": "^2.4.3",
